saturn-program-macros/tests/compile_fail/duplicate_variant.stderr
error: duplicate instruction variant after case conversion; rename the handler or use distinct names
  --> tests/compile_fail/duplicate_variant.rs:31:12
   |
31 |     pub fn fooHandler<'info>(
   |            ^^^^^^^^^^
